# PokeEngine

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Core/: actor.cpp  actor.h  actor_component.cpp  actor_component.h  application.cpp  application.h
src/Utility/: Camera.cpp  Camera.h  Shader.cpp  Shader.h
